// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`constructLine > ansi 256 colors 1`] = `
<div>
  <span
    style="color: rgb(128, 128, 128);"
  >
    test_selector:
  </span>
</div>
`;

exports[`constructLine > ansi colors 1`] = `
<div>
  <span
    style="color: rgb(0, 187, 187); font-weight: bolder;"
  >
    options(crayon.enabled = TRUE)
  </span>
</div>
`;

exports[`constructLine > error 1`] = `
<div>
  <span
    style="color: rgb(255, 83, 83);"
  >
    Error message
  </span>
</div>
`;

exports[`constructLine > lineWithTimestamp > false 1`] = `
<div>
  <span>
    hello world
  </span>
</div>
`;

exports[`constructLine > lineWithTimestamp > true 1`] = `
<div>
  <span>
    <time
      datetime="2022-01-01T22:00"
    >
      2022-01-01T22:00
    </time>
     
    <span>
      hello world
    </span>
  </span>
</div>
`;
